--- a/week-6-geoshield-api/developers/templates/developers/login.html
+++ b/week-6-geoshield-api/developers/templates/developers/login.html
@@ -6,26 +6,55 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-5">
-            <div class="card">
+            <div class="card shadow">
                 <div class="card-header bg-primary text-white">
-                    <h4>Login</h4>
+                    <h4 class="mb-0"><i class="bi bi-box-arrow-in-right"></i> Login to GeoShield</h4>
                 </div>
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
+                        
                         <div class="mb-3">
-                            <label>Username</label>
-                            <input type="text" name="username" class="form-control" required>
+                            <label for="username" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="username" name="username" required autofocus>
                         </div>
+                        
                         <div class="mb-3">
-                            <label>Password</label>
-                            <input type="password" name="password" class="form-control" required>
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
+                        
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="remember">
+                            <label class="form-check-label" for="remember">Remember me</label>
+                        </div>
+                        
+                        <button type="submit" class="btn btn-primary w-100 py-2">
+                            <i class="bi bi-box-arrow-in-right"></i> Login
+                        </button>
                     </form>
-                    <p class="mt-3 text-center">
-                        Don't have an account? <a href="{% url 'developers:signup' %}">Sign up</a>
+                    
+                    <hr>
+                    
+                    <div class="text-center">
+                        <p class="mb-2">
+                            Don't have an account? <a href="{% url 'developers:signup' %}">Sign up</a>
+                        </p>
+                        <p class="mb-0">
+                            <a href="#" class="text-muted">Forgot password?</a>
+                        </p>
+                    </div>
                 </div>
+            </div>
+            
+            <div class="text-center mt-4">
+                <a href="{% url 'billing:pricing' %}" class="text-decoration-none">
+                    <i class="bi bi-currency-dollar"></i> View Pricing
+                </a>
+                <span class="mx-2">|</span>
+                <a href="/swagger/" class="text-decoration-none">
+                    <i class="bi bi-braces"></i> API Docs
+                </a>
             </div>
         </div>
     </div>
